Fix Bug #1032058 - Translation Form Alignment
1. Fix the expand and collapse widget so that the icons signalling functionality display.
2. Move the page meta information into its own expanding and collapsing area (the only meta information right now is tags).
3. Move the remaining information to fill the width of the page instead of being underneath the translation side.
4. Title this new section "version notes" (it's called version comments in the screenshot but I didn't like that).
5. Fix attachments so they show up again.
6. Document heiracrchy fixes to support new organization.
7. Style fixes for page-button alignment.
8. Move Review Flags up in document order.

Potential site wide impact:
- changed behaviour of clearfix() to clear using clear:both instead of :before
- removed wiki-block as extend for page-tags and page-comments and instead placed the class on the blocks.

--- a/media/redesign/stylus/includes/mixins.styl
+++ b/media/redesign/stylus/includes/mixins.styl
@@ -286,13 +286,12 @@ offscreen() {
 }
 
 clearfix() {
-    &:before, &:after {
-        content: ' ';
-        display: table;
-    }
+    clear:both;
 
     &:after {
+        content: ' ';
         clear: both;
+        display: table;
     }
 }
 
